--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -4,16 +4,7 @@ global:
   qsname: quickstart-amazon-eks
   regions:
     - us-east-1
-    - us-east-2
     - us-west-2
-    - eu-central-1
-    - eu-west-1
-    - eu-west-2
-    - eu-west-3
-    - ap-northeast-1
-    - ap-southeast-1
-    - ap-southeast-2
-  reporting: true
   package-lambda: true
 tests:
   quickstart-amazon-eks-defaults:
@@ -28,4 +19,4 @@ tests:
     parameter_input: amazon-eks-cluster-autoscaler.json
     template_file: amazon-eks-master.template.yaml
     regions:
-      - eu-central-1
+      - us-west-2
