--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -4,7 +4,6 @@ global:
   qsname: quickstart-amazon-eks
   regions:
     - us-east-1
-    - us-west-2
   package-lambda: true
 tests:
   quickstart-amazon-eks-defaults:
@@ -14,9 +13,9 @@ tests:
     parameter_input: amazon-eks-efs.json
     template_file: amazon-eks-master.template.yaml
     regions:
-      - us-west-2
+      - us-east-1
   quickstart-amazon-eks-cluster-autoscaler:
     parameter_input: amazon-eks-cluster-autoscaler.json
     template_file: amazon-eks-master.template.yaml
     regions:
-      - us-west-2
+      - us-east-1
