--- a/templates/amazon-eks-nodegroup.template.yaml
+++ b/templates/amazon-eks-nodegroup.template.yaml
@@ -560,6 +560,19 @@ Mappings:
       SLES15EKS113GPU: ami-0f1e3b3fb0fec0361
       SLES15EKS112: ami-0f1e3b3fb0fec0361
       SLES15EKS112GPU: ami-0f1e3b3fb0fec0361
+    sa-east-1:
+      AMZNEKS114: ami-0c53683bb5f25f113
+      AMZNEKS114GPU: ami-0e2dec720570d5f5b
+      AMZNEKS113: ami-03fa8cb660993faa4
+      AMZNEKS113GPU: ami-053a7e4e104b49032
+      AMZNEKS112: ami-08d1476c01d4a7250
+      AMZNEKS112GPU: ami-0ba534d623957ed6d
+      SLES15EKS114: ami-0772af912976aa692
+      SLES15EKS114GPU: ami-0772af912976aa692
+      SLES15EKS113: ami-0772af912976aa692
+      SLES15EKS113GPU: ami-0772af912976aa692
+      SLES15EKS112: ami-0772af912976aa692
+      SLES15EKS112GPU: ami-0772af912976aa692  
 Resources:
   CleanupSecurityGroupDependencies:
     Condition: CleanupSGs
